tests/NormalTests/paczka1/small_fuzzy/49183625.err
Error in line 5: Wl2rsIXH90g S444 69,5
Error in line 1: S1O S444 62,4
Error in line 6: SRE S444 11,3
Error in line 14: 3PZ S444 86,4
